  calling the matchPattern() function or any other function that has the 'algo'
  argument.

o Renamed the 'mismatch' arg -> 'max.mismatch' for the matchPattern(),
  matchLRPatterns() and matchPDict() functions.

UTILITIES

o Added the coverage() generic function with methods for IRanges,
  MaskCollection, XStringViews, MaskedXString and MIndex objects.

o Added functions read.BStringSet(), read.DNAStringSet(), read.RNAStringSet(),
  read.AAStringSet() and write.XStringSet(). read.BStringSet() and family is
  now prefered over read.XStringViews() for loading a FASTA file into R.
  Renamed helper function BStringViewsToFASTArecords() ->
  XStringSetToFASTArecords().

o Added the replaceLetterAtLoc() generic function with a method for DNAString
  objects (methods for other types of objects might come later) for making
  a copy of a sequence where letters are replaced by new letters at some
  specified locations.

o Added the chartr() generic function with methods for XString, XStringSet
  and XStringViews objects.

o Made the "show" methods for XString, XStringViews and XStringAlign objects
  "getOption('width') aware" so that the user can control the width of the
  output they produce.

o Added the dinucleotideFrequency(), trinucleotideFrequency(),
  oligonucleotideFrequency(), strrev() and mkAllStrings() functions.

o Four changes in alphabetFrequency():
  (1) when used with 'baseOnly=TRUE', the frequency of the gap letter ("-") is
      not returned anymore (now it's treated as any 'other' letter i.e. any
      non-base letter);
  (2) added the 'freq' argument;
  (3) added the 'collapse' argument;
  (4) made it 1000x faster on XStringSet and XStringViews objects.

o Added "as.character" and "consmat" methods for XStringAlign objects.

o Added the patternFrequency() generic function with a method for CWdna_PDict
  objects (will come later for TBdna_PDict objects).

o Added a "duplicated" method for CWdna_PDict objects (will come later for
  TBdna_PDict objects).
