@@ -4,7 +4,7 @@ Title: String objects representing biological sequences, and matching
 Description: Memory efficient string containers, string matching
 	algorithms, and other utilities, for fast manipulation of large
 	biological sequences or set of sequences.
-Version: 2.9.2
+Version: 2.9.3
 Author: H. Pages, R. Gentleman and S. DebRoy
 Maintainer: H. Pages <hpages@fhcrc.org>
 biocViews: SequenceMatching, Genetics, Infrastructure
@@ -42,6 +42,7 @@ Collate: 00datacache.R
 	reverseComplement.R
 	toComplex.R
 	replaceLetterAtLoc.R
+	maskMotif.R
 	match-utils.R
 	matchPattern.R
 	matchPattern.BOC.R
