@@ -55,8 +55,6 @@
 \alias{masks<-}
 \alias{masks<-,MaskedXString,NULL-method}
 \alias{masks<-,MaskedXString,MaskCollection-method}
-\alias{masks<-,MaskedXString,XString-method}
-\alias{masks<-,MaskedXString,character-method}
 \alias{masks<-,XString,NULL-method}
 \alias{masks<-,XString,ANY-method}
 
@@ -74,6 +72,7 @@
 \author{H. Pages}
 
 \seealso{
+  \code{\link{maskMotif}},
   \link{XString-class},
   \link{MaskCollection-class},
   \link{XStringViews-class},
@@ -81,46 +80,14 @@
 }
 
 \examples{
-  ## ---------------------------------------------------------------------
-  ## A. MASKING BY POSITION
-  ## ---------------------------------------------------------------------
-
+  ## Masking by position
   mask0 <- Mask(mask.width=29, start=c(3, 10, 25), width=c(6, 8, 5))
-  x <- DNAString("ACTCAAACTAGGATAGNACTTNNCCAGGC")
+  x <- DNAString("ACACAACTAGATAGNACTNNGAGAGACGC")
   masks(x) <- mask0
   x
   gaps(x)
 
-  ## ---------------------------------------------------------------------
-  ## B. MASKING BY CONTENT
-  ## ---------------------------------------------------------------------
-
-  masks(x) <- "N"
-  x
-  as(x, "XStringViews")
-  gaps(x)
-  as(gaps(x), "XStringViews")
-
-  library(BSgenome.Dmelanogaster.FlyBase.r51)
-  chrU <- Dmelanogaster[["U"]]
-  chrU
-  alphabetFrequency(chrU)
-  masks(chrU) <- "N"
-  chrU
-  alphabetFrequency(chrU)
-  as(chrU, "XStringViews")
-  as(gaps(chrU), "XStringViews")
-
-  ## ---------------------------------------------------------------------
-  ## C. MASKING WITH MORE THAN ONE MASK
-  ## ---------------------------------------------------------------------
-
-  mask2 <- Mask(mask.width=length(chrU), start=c(50000, 350000, 543900), width=25000)
-  names(mask2) <- "some ugly regions"
-  masks(chrU) <- append(masks(chrU), mask2)
-  chrU
-  as(chrU, "XStringViews")
-  as(gaps(chrU), "XStringViews")
+  ## See ?maskMotif for masking by content
 }
 
 \keyword{methods}
