@@ -82,6 +82,8 @@ UTILITIES
 o Added the coverage() generic function with methods for IRanges,
   MaskCollection, XStringViews, MaskedXString and MIndex objects.
 
+o Added the maskMotif() generic function for masking a sequence by content.
+
 o Added functions read.BStringSet(), read.DNAStringSet(), read.RNAStringSet(),
   read.AAStringSet() and write.XStringSet(). read.BStringSet() and family is
   now prefered over read.XStringViews() for loading a FASTA file into R.
@@ -138,7 +140,10 @@ o Started the Biostrings C interface (work-in-progress).
 
 BASIC CONTAINERS
 
-o Added the MaskedXString family of containers for storing masked sequences.
+o Added 2 containers for handling masked sequences:
+    - The MaskCollection container for storing a collection of masks that can
+      be used to mask regions in a sequence.
+    - The MaskedXString family of containers for storing masked sequences.
 
 o Added new containers for storing a big set of sequences:
     - The XStringSet family: BStringSet, DNAStringSet, RNAStringSet and
